[project]
name = "spec-kitty-cli"
version = "2.0.2"
description = "Spec Kitty, a tool for Specification Driven Development (SDD) agentic projects, with kanban and git worktree isolation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Spec Kitty Contributors" },
]
maintainers = [
    { name = "Spec Kitty Contributors" },
]
keywords = [
    "specification",
    "spec-driven-development",
    "sdd",
    "agentic-development",
    "ai-coding",
    "claude-code",
    "ai-agents",
    "llm-tools",
    "code-generation",
    "feature-specs",
    "requirements",
    "planning",
    "kanban",
    "git-worktree",
    "workflow-automation",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "httpx[socks]>=0.28.1",
    "platformdirs>=4.9.2",
    "readchar>=4.2.1",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.0",
    "packaging>=23.0",
    "psutil>=5.9.0",  # Cross-platform process management for dashboard
    "spec-kitty-events==2.3.1",
    "spec-kitty-runtime @ git+https://github.com/Priivacy-ai/spec-kitty-runtime.git@v0.2.0a0",
    "websockets>=12.0",  # WebSocket client for sync protocol
    "toml>=0.10.2",  # Config file parsing
    "filelock>=3.13.0",  # Credential storage locking
    "requests>=2.31.0",  # HTTP client for batch sync
    "transitions>=0.9.2",  # State machine library for mission DSL v1
    "jsonschema>=4.0",  # JSON Schema validation for mission configs
]

[project.urls]
Repository = "https://github.com/Priivacy-ai/spec-kitty"
Issues = "https://github.com/Priivacy-ai/spec-kitty/issues"
Documentation = "https://priivacy-ai.github.io/spec-kitty/"
Changelog = "https://github.com/Priivacy-ai/spec-kitty/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21.0",  # Required for async tests
    "pytest-cov>=4.1.0",  # Required by CI coverage flags
    "pytest-timeout>=2.2.0",  # Required by mutmut pytest_add_cli_args --timeout flag
    "diff-cover>=10.0.0",  # Enforce changed-line coverage in CI
    "build>=1.0.0",  # Required for distribution tests (wheel building)
    "mutmut>=3.5.0",  # Mutation testing
]

[project.scripts]
spec-kitty = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
exclude = [
    "src/specify_cli/**/tests/**",
]
# Include all non-Python files (templates, configs, etc.)
artifacts = [
    "src/specify_cli/**/*.md",
    "src/specify_cli/**/*.yaml",
    "src/specify_cli/**/*.yml",
    "src/specify_cli/**/*.json",
    "src/specify_cli/**/*.csv",
    "src/specify_cli/**/*.template",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    ".kittify/active-mission",
    "src/specify_cli/**/tests/**",
]

[tool.pytest.ini_options]
markers = [
    "adversarial: Adversarial/security tests for 0.13.0",
    "distribution: Tests requiring wheel install (slow, no SPEC_KITTY_TEMPLATE_ROOT)",
    "e2e: End-to-end tests exercising the full CLI workflow (may be slow)",
    "slow: Tests taking >10 seconds",
    "platform_darwin: macOS-specific tests (case-insensitive FS)",
    "platform_linux: Linux-specific tests",
    "requires_symlinks: Tests that need symlink support",
]

[tool.mypy]
# Keep strict mode as the default quality bar for actively maintained code.
strict = true

[[tool.mypy.overrides]]
# Transitional quarantine for legacy modules that are still being migrated to strict typing.
module = [
    "specify_cli.agent_utils.status",
    "specify_cli.cli.commands.glossary",
    "specify_cli.cli.ui",
    "specify_cli.core.feature_detection",
    "specify_cli.events.adapter",
    "specify_cli.manifest",
    "specify_cli.mission_v1.compat",
    "specify_cli.mission_v1.events",
    "specify_cli.mission_v1.runner",
    "specify_cli.scripts.tasks.acceptance_support",
    "specify_cli.scripts.tasks.task_helpers",
    "specify_cli.scripts.tasks.tasks_cli",
    "specify_cli.status.validate",
    "specify_cli.sync.auth",
    "specify_cli.sync.background",
    "specify_cli.sync.batch",
    "specify_cli.sync.client",
    "specify_cli.tasks_support",
    "specify_cli.verify_enhanced",
]
ignore_errors = true

[tool.mutmut]
# WP04 scope: merge/ and core/ (squashing campaign batch 2)
paths_to_mutate = ["src/specify_cli/merge/", "src/specify_cli/core/"]
tests_dir = ["tests/unit/", "tests/specify_cli/"]
pytest_add_cli_args = ["--ignore=tests/unit/agent/test_tasks.py"]
debug = true
also_copy = [
    "LICENSE",
    "README.md",
    "src/specify_cli/*.py",  # Copy all top-level modules (frontmatter, etc.)
    "src/doctrine/",         # Copy doctrine package for imports
]
# Exclude migrations (idempotent, hard to unit-test meaningfully via mutation)
do_not_mutate = [
    "src/specify_cli/upgrade/migrations/",
]
