[project]
name = "spec-kitty-doctrine"
version = "1.0.0"
description = "Doctrine assets and agent profile domain model for Spec Kitty"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spec Kitty Contributors" }]
dependencies = [
  "pydantic>=2.0",
  "ruamel.yaml>=0.18.0",
  "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doctrine"]
artifacts = [
  "src/doctrine/**/*.md",
  "src/doctrine/**/*.yaml",
  "src/doctrine/**/*.yml",
  "src/doctrine/**/*.json",
  "src/doctrine/**/*.template",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/doctrine/**/*",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
